# drew-serial-lib-qt

./: DeviceSelector.h  MsgPack.h  MsgPack_types.h  Packetizer.h  README.md  datalogger.cpp  datalogger.h  drew-serial-lib-qt.pro  drew_util.h  filedownloader.h  main.cpp  mainwindow.cpp  mainwindow.h  mcu-vendor-id-table.h  serial_manager.cpp  serial_manager.h  serialportreader-async.cpp  serialportreader-async.h  serialportwriter-async.cpp  serialportwriter-async.h  ui_serialComsPanel.h
MsgPack/MsgPack/util/DebugLog/: DebugLog.h
Packetizer/: CMakeLists.txt  package.xml  ros_encoding.cpp
Packetizer/util/CRCx/: CMakeLists.txt  package.xml
Packetizer/util/CRCx/CRCpp/: CRCpp.h
Packetizer/util/CRCx/FastCRC/: FastCRChw.cpp  FastCRChw.h
QCustomPlot/examples/build-plot-examples-Desktop_Qt_5_14_1_MinGW_32_bit-Debug/: Makefile  moc_mainwindow.cpp  moc_qcustomplot.cpp  ui_mainwindow.h
QCustomPlot/examples/plots/: mainwindow.cpp
_arduino_/arr_map_bind_echo/: arr_map_bind_echo.ino
datalogs/: .~lock.test02.csv#  001 - testlog.csv  002 - testlog.csv  003 - testlog.csv  004 - testlog.csv  005 - testlog.csv  006 - testlog.csv  008 - testlog.csv  009 - testlog.csv  010 - testlog.csv  011 - testlog.csv  012 - making sure new filelogger class doesn't cras.csv  013 - making sure new filelogger class doesn't cras.csv  014 - making sure new filelogger class doesn't cras.csv  015 wussup - making sure new filelogger class doesn't cras.csv  017 - whats up with nan.csv
ui stuff for python implementation later/: serialComsPanel.ui
